# pqc-migration-audit

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  AUTONOMOUS_EXECUTION_FINAL_REPORT.json  AUTONOMOUS_EXECUTION_FINAL_REPORT.md  AUTONOMOUS_EXECUTION_FINAL_STATUS.md  AUTONOMOUS_EXECUTION_SUMMARY.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.md  AUTONOMOUS_SDLC_FINAL_ASSESSMENT.json  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_AUTONOMOUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  Dockerfile  EXECUTION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT_AUTONOMOUS.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_ASSESSMENT.md  PROJECT_CHARTER.md  README.md  SECURITY.md  TERRAGON_AUTONOMOUS_EXECUTION_FINAL_REPORT.md  autonomous_sdlc_final_validation.py  comprehensive_analysis.json  conftest.py  coverage.json  coverage_improved.json  critical_coverage.json  debug-config.py  (+56 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  project-metrics.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_vulnerability.yml
.github/workflows/: ci.yml
.terragon/: README.md  autonomous-executor.py  discovery-engine.py  run-terragon.sh  scoring-engine.py  terragon-sdlc.py  value-config.yaml
.terragon/.terragon/: backlog.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_READINESS.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  ROADMAP.md  SETUP_REQUIRED.md  TEAM_ONBOARDING.md  TESTING.md
docs/adr/: 0001-architecture-decision-record-template.md  (+2 more)
examples/: VulnerableCrypto.java  vulnerable_crypto.go  vulnerable_crypto.py
monitoring/: alert-rules.yml  alertmanager.yml  docker-compose.monitoring.yml  prometheus-config.yml  recording-rules.yml
pqc_patches/: Migration_Guide.md  _root_repo_examples_VulnerableCrypto.java_line_18.patch  _root_repo_examples_VulnerableCrypto.java_line_27.patch  _root_repo_examples_vulnerable_crypto.go_line_14.patch  _root_repo_examples_vulnerable_crypto.go_line_15.patch  _root_repo_examples_vulnerable_crypto.go_line_19.patch  _root_repo_examples_vulnerable_crypto.go_line_20.patch  _root_repo_examples_vulnerable_crypto.go_line_6.patch  _root_repo_examples_vulnerable_crypto.py_line_10.patch  _root_repo_examples_vulnerable_crypto.py_line_19.patch  _root_repo_examples_vulnerable_crypto.py_line_3.patch
scripts/: container-security-scan.sh  dependency-scan.sh  generate-sbom.sh  metrics-collector.py  setup-dev.sh  validate-production-readiness.sh  validate-quality-gates.sh
test_performance/: test_crypto_0.py  test_crypto_1.py  test_crypto_10.py  test_crypto_11.py  test_crypto_12.py  test_crypto_13.py  test_crypto_14.py  test_crypto_15.py  test_crypto_16.py  test_crypto_17.py  test_crypto_18.py  test_crypto_19.py  test_crypto_2.py  test_crypto_3.py  test_crypto_4.py  test_crypto_5.py  test_crypto_6.py  test_crypto_7.py  test_crypto_8.py  test_crypto_9.py
tests/: conftest.py  pytest_helpers.py  test_advanced_features.py  test_basic_imports.py  test_cli.py  test_cli_comprehensive.py  test_cli_interface.py  test_comprehensive_coverage.py  test_core_comprehensive.py  test_core_coverage.py  test_core_execution.py  test_database_operations.py  test_example.py  test_intensive_coverage.py  test_module_coverage.py  test_performance_integration.py  test_planner.py  test_report.py  test_risk.py  test_scanner.py  test_security_comprehensive.py  test_security_performance.py  test_services_integration.py  test_types_validation.py
(+89 files in other folders)
