[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqc-migration-audit"
version = "1.0.0"
description = "Post-Quantum Cryptography migration auditor — scans codebases and generates PQC migration roadmaps"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Daniel Schmidt"}]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pqc-audit = "pqc_migration_audit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
